<resources>
    <string name="app_name">ShoeStore</string>
    <string name="app_name_title">Shoe Store</string>
    <!-- Strings related to login -->
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="prompt_email">foo@bar.com</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_logout">Logout</string>
    <!-- Strings related to shoe store -->
    <string name="welcome_first">This project consists of five screens that let you manage a shoe store.</string>
    <string name="welcome_second">You can add, modify, list and do basic stuff with each item.</string>
    <string name="instructions_button">Instructions</string>
    <string name="instructions_title_label">Instructions</string>
    <string name="instructions_label">Click the listing button load the full listing of elements that are available in the shoe store. \n\n Remember that you can logout using the logout button from the menu at the listing screen only.</string>
    <string name="instructions_sidenote_label">Dev note: Most layouts use ConstraintLayouts for easier management on different screen sizes and fastest placement of elements. The listing screen is using LinearLayout to show all the Shoe Store items as a list.</string>
    <string name="listing_button">Listing</string>
    <string name="listing_title_label">Listing</string>
    <string name="shoe_name_text">Name</string>
    <string name="shoe_size_text">Size</string>
    <string name="shoe_company_text">Company</string>
    <string name="shoe_description_text">Description</string>
    <string name="add_shoe_message">Add shoe</string>
    <string name="shoe_details_text">Details</string>
    <string name="save_button_text">Save</string>
    <string name="description_hint">A nice pair of shoes</string>
    <string name="company_hint">Noik</string>
    <string name="size_hint">15.0</string>
    <string name="name_hint">Good shoe</string>
    <string name="cancel_button_text">Cancel</string>

</resources>
