<?xml version="1.0" encoding="utf-8"?><!-- This layout use LinearLayout for displaying a full screen list of shoes available.-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="listingViewModel"
            type="com.udacity.shoestore.ListingViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/shoes_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/fragment_horizontal_margin"
            android:paddingTop="@dimen/fragment_vertical_margin"
            android:paddingRight="@dimen/fragment_horizontal_margin"
            android:paddingBottom="@dimen/fragment_vertical_margin"
            android:gravity="center"
            tools:context=".Listing">

            <TextView
                android:id="@+id/shoeName_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_name_text"
                />
            <TextView
                android:id="@+id/shoeSize_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_size_text" />
            <TextView
                android:id="@+id/shoeCompany_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_company_text" />
            <TextView
                android:id="@+id/shoeDescription_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_description_text" />
        </LinearLayout>
    </ScrollView>

</layout>